--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loki Serial Intro Anim</title>
+    <title>LOKI Serial Intro Anim</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="icon.png">
     <link href="https://fonts.googleapis.com/css?family=Stint+Ultra+Condensed:regular" rel="stylesheet"/>
